--- a/Views/Shared/_LayoutKhachHang.cshtml
+++ b/Views/Shared/_LayoutKhachHang.cshtml
@@ -21,7 +21,7 @@
                 <nav class="main-nav">
                     <ul>
                         <li><a href="/Home">HOME</a></li>
-                        <li><a href="#">EXPERIENCE</a></li>
+                        <li><a href="/Home/Experience">EXPERIENCE</a></li>
                         <li><a href="/Home/Product">HALL INFOMATION</a></li>
                     </ul>
                 </nav>
