--- a/Views/Shared/_LayoutKhachHang.cshtml
+++ b/Views/Shared/_LayoutKhachHang.cshtml
@@ -31,7 +31,9 @@
                         <span>MARRIOTT</span>
                         <span>BONVOY</span>
                     </div>
-                    <div class="header-action-item"><span>SIGN IN OR JOIN</span></div>
+                    <a asp-controller="Account" asp-action="Login" class="header-action-item">
+                        <span>SIGN IN OR JOIN</span>
+                    </a>
                 </div>
             </div>
             <div class="header-divider"></div>
