--- a/Areas/Banquet/Pages/DichVus/createDichVu.cshtml
+++ b/Areas/Banquet/Pages/DichVus/createDichVu.cshtml
@@ -21,7 +21,7 @@
 
             <div class="form-group">
                 <label asp-for="DichVu.DonGia" class="control-label"></label>
-                <input asp-for="DichVu.DonGia" class="form-control" />
+                <input asp-for="DichVu.DonGia" type="number" min="1" class="form-control" />
                 <span asp-validation-for="DichVu.DonGia" class="text-danger"></span>
             </div>
 
