--- a/Views/Shared/Components/Default.cshtml
+++ b/Views/Shared/Components/Default.cshtml
@@ -40,7 +40,7 @@
         <a class="d-block mb-2" asp-controller="Account" asp-action="UpdateInfo">
             <i class="fa-solid fa-user-pen"></i> Cập nhật thông tin cá nhân
         </a>
-        <a class="d-block" asp-controller="Account" asp-action="Logout">
+        <a class="d-block" asp-controller="Account" asp-action="Logout" asp-area="">
             <i class="fa-solid fa-right-from-bracket"></i> Đăng xuất
         </a>
     </div>
